--- a/Actividades/actividad4/shopall/pom.xml
+++ b/Actividades/actividad4/shopall/pom.xml
@@ -53,9 +53,8 @@
             <version>6.0.12</version>
         </dependency>
 		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
-			<version>3.0.2</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
